MDL-32479 - RTL Theme fixes for Moodle 2 (theme/base) Right align item's content (when viewing a Glossary activity in RTL mode)

--- a/mod/glossary/styles.css
+++ b/mod/glossary/styles.css
@@ -30,3 +30,5 @@
 #page-mod-glossary-view table.glossarycategoryheader th {padding:0px;}
 
 #page-mod-glossary-showentry #page-content {min-width:600px;}
+
+.path-mod-glossary.dir-rtl .glossarypost {text-align: right;}
